welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:10: error: illegal start of simple expression
		if (die2=6 && !-die1=6))
                                       ^